Fix status bar clipped in minimal state

--- a/arduino-ide-extension/src/browser/style/index.css
+++ b/arduino-ide-extension/src/browser/style/index.css
@@ -55,7 +55,8 @@
 /* Makes the sidepanel a bit wider when opening the widget */
 .p-DockPanel-widget {
   min-width: 200px;
-  min-height: 200px;
+  min-height: 20px;
+  height: 200px;
 }
 
 /* Overrule the default Theia CSS button styles. */
